---
source: tests/new.rs
expression: tree
---
{
  ".cargo": {
    "config.toml": "[cargo-new]\nname = \"\"\nemail = \"\"\n"
  },
  "compete.toml": "test-suite = \"{{ manifest_dir }}/testcases/{{ problem | kebabcase }}.yml\"\n\n[new]\nplatform = \"yukicoder\"\npath = \"./{{ package_name }}\"\n\n[new.template.dependencies]\nkind = \"inline\"\ncontent = '''\nproconio = \"=0.3.6\"\n'''\n\n[new.template.src]\nkind = \"inline\"\ncontent = '''\nfn main() {\n    todo!();\n}\n'''\n",
  "contest100": {
    "Cargo.toml": "[package]\nname = \"contest100\"\nversion = \"0.1.0\"\nauthors = [\"\"]\nedition = \"2018\"\n\n[package.metadata.cargo-compete]\nconfig = \"../compete.toml\"\n\n[package.metadata.cargo-compete.bin]\na = { name = \"contest100-a\", problem = { platform = \"yukicoder\", kind = \"contest\", contest = \"100\", index = \"A\", url = \"https://yukicoder.me/problems/no/191\" } }\nb = { name = \"contest100-b\", problem = { platform = \"yukicoder\", kind = \"contest\", contest = \"100\", index = \"B\", url = \"https://yukicoder.me/problems/no/192\" } }\nc = { name = \"contest100-c\", problem = { platform = \"yukicoder\", kind = \"contest\", contest = \"100\", index = \"C\", url = \"https://yukicoder.me/problems/no/193\" } }\nd = { name = \"contest100-d\", problem = { platform = \"yukicoder\", kind = \"contest\", contest = \"100\", index = \"D\", url = \"https://yukicoder.me/problems/no/194\" } }\ne = { name = \"contest100-e\", problem = { platform = \"yukicoder\", kind = \"contest\", contest = \"100\", index = \"E\", url = \"https://yukicoder.me/problems/no/195\" } }\nf = { name = \"contest100-f\", problem = { platform = \"yukicoder\", kind = \"contest\", contest = \"100\", index = \"F\", url = \"https://yukicoder.me/problems/no/196\" } }\n\n[[bin]]\nname = \"contest100-a\"\npath = \"src/bin/a.rs\"\n\n[[bin]]\nname = \"contest100-b\"\npath = \"src/bin/b.rs\"\n\n[[bin]]\nname = \"contest100-c\"\npath = \"src/bin/c.rs\"\n\n[[bin]]\nname = \"contest100-d\"\npath = \"src/bin/d.rs\"\n\n[[bin]]\nname = \"contest100-e\"\npath = \"src/bin/e.rs\"\n\n[[bin]]\nname = \"contest100-f\"\npath = \"src/bin/f.rs\"\n[dependencies]\nproconio = \"=0.3.6\"\n",
    "src": {
      "bin": {
        "a.rs": "fn main() {\n    todo!();\n}\n",
        "b.rs": "fn main() {\n    todo!();\n}\n",
        "c.rs": "fn main() {\n    todo!();\n}\n",
        "d.rs": "fn main() {\n    todo!();\n}\n",
        "e.rs": "fn main() {\n    todo!();\n}\n",
        "f.rs": "fn main() {\n    todo!();\n}\n"
      }
    },
    "testcases": {
      "a.yml": "---\ntype: Batch\ntimelimit: 5s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      4\n      500 300 200 100\n    out: |\n      30\n  - name: sample2\n    in: |\n      5\n      400 250 200 100 50\n    out: |\n      60\n  - name: sample3\n    in: |\n      5\n      200 200 200 200 200\n    out: |\n      0\n\nextend: []\n",
      "b.yml": "---\ntype: Batch\ntimelimit: 2s\nmatch: Lines\ncases:\n  - name: sample1\n    in: \"101\\n\"\n    out: ~\n    timelimit: ~\n    match: ~\n  - name: sample2\n    in: \"1000\\n\"\n    out: ~\n    timelimit: ~\n    match: ~\nextend: []",
      "c.yml": "---\ntype: Batch\ntimelimit: 1s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      1+1\n    out: |\n      2\n  - name: sample2\n    in: |\n      1+111\n    out: |\n      112\n  - name: sample3\n    in: |\n      10+4-1+15\n    out: |\n      514\n\nextend: []\n",
      "d.yml": "---\ntype: Batch\ntimelimit: 5s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: \"2 5\\n1 1\"\n    out: 5 12\n  - name: sample2\n    in: \"5 10\\n1 2 3 4 5\"\n    out: 214 438\n  - name: sample3\n    in: \"30 987654321012\\n3 1 4 1 5 9 2 6 5 3 5 8 9 7 9 3 2 3 8 4 6 2 6 4 3 3 8 3 2 7\"\n    out: 923032656 920866414\n\nextend: []\n",
      "e.yml": "---\ntype: Batch\ntimelimit: 5s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: 5 13 34\n    out: 1 1\n  - name: sample2\n    in: 11 11 11\n    out: 1 3\n  - name: sample3\n    in: 5 6 9\n    out: \"-1\"\n  - name: sample4\n    in: 35169 76228629 17995137\n    out: 5487 14841\n\nextend: []\n",
      "f.yml": "---\ntype: Batch\ntimelimit: 2s\nmatch: Lines\n\ncases:\n  - name: sample1\n    in: |\n      6 1\n      0 1\n      0 2\n      1 3\n      2 4\n      2 5\n    out: |\n      3\n  - name: sample2\n    in: |\n      6 2\n      0 1\n      0 2\n      1 3\n      2 4\n      2 5\n    out: |\n      4\n  - name: sample3\n    in: |\n      6 3\n      0 1\n      0 2\n      1 3\n      2 4\n      2 5\n    out: |\n      4\n\nextend: []\n"
    }
  }
}
